# timetable-myuda

./: .env.example  Cargo.toml  README.md  t.html  te.txt
src/: config.rs  lib.rs  main.rs  quote.rs
