[package]
name = "request"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
scraper = "0.12"
fantoccini = "0.21.2"
prettytable-rs = "0.10.0"
use = "0.0.1-pre.0"
chrono = "0.4.38"
figlet-rs = "0.1.5"
clap = { version = "4.0", features = ["derive"] }
colored = "2.1.0"
indicatif = "0.18.0"
rayon = "1.8"
futures = "0.3"
